add patch endoint to edit phone number and name on profile
